[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax_vqe"
version = "0.1.0"
description = "A Variational Quantum Eigensolver using JAX"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "jax",
    "jaxlib",
    "optax",
    "numpy",
    "scipy",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]
